# mmd_zentrum

./: README.md  implementationPlan.md
.agent/skills/: ai_skill.md  backend_skill.md  frontend_skill.md  supabase_skill.md
backend/: .gitignore  backend.md  main.py  pyproject.toml
frontend/: frontend.md  package-lock.json  package.json
